fixed button display spacing and checked for responsivness

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,6 +37,9 @@ body {
 }
 
 #nav-name{
+  font-weight: 800 ;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
   color: var(--mid)
 }
 
@@ -55,7 +58,6 @@ body {
 /* ------------------------------------------- */
 
 #signup-card , #login-card{
-  padding: 2em;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -77,10 +79,12 @@ body {
 /* ------------------------------------------- */
 
 .btn {
-  margin: 10;
+
+  border: none;
   overflow-wrap: break-word;
   background-color: var(--mid-light);
   color: var(--mid-dark);
+
 }
 
 .btn:hover {
